devops/module-04-observabilite/ingress-todo-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api
spec:
  ingressClassName: nginx
  rules:
    - host: nomparticipant.cbao.beopenit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-api
                port:
                  number: 80
